[project]
name = "promframe"
version = "0.0.1"
description = "Fetch Prometheus data as pandas dataframe"
authors = [
    {name = "Avik Basu",email = "ab93@users.noreply.github.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas[performance] (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.11.8"
pre-commit = "^4.2.0"
pytest = "^8.3.5"
pytest-mock = "^3.14.0"
pytest-cov = "^6.1.1"

